--- a/SBM/SuperMarioBrothers/SuperMarioBrothers.vcxproj
+++ b/SBM/SuperMarioBrothers/SuperMarioBrothers.vcxproj
@@ -155,9 +155,12 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="StageControl.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="StageControl.h" />
+    <ClInclude Include="StageControl_Config.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
