--- a/SBM/SuperMarioBrothers/SuperMarioBrothers.vcxproj
+++ b/SBM/SuperMarioBrothers/SuperMarioBrothers.vcxproj
@@ -153,14 +153,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GimmickCtrl.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SceneManager.cpp" />
-    <ClCompile Include="StageControl.cpp" />
+    <ClCompile Include="StageCtrl.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GimmickCtrl.h" />
     <ClInclude Include="SceneManager.h" />
-    <ClInclude Include="StageControl.h" />
-    <ClInclude Include="StageControl_Config.h" />
+    <ClInclude Include="StageCtrl.h" />
+    <ClInclude Include="StageCtrl_Config.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
