敵情報の追加

--- a/SBM/SuperMarioBrothers/SuperMarioBrothers.vcxproj
+++ b/SBM/SuperMarioBrothers/SuperMarioBrothers.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="StageCtrl.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="EnemyConfig.h" />
     <ClInclude Include="GimmickCtrl.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="StageCtrl.h" />
