--- a/SBM/SuperMarioBrothers/SuperMarioBrothers.vcxproj.filters
+++ b/SBM/SuperMarioBrothers/SuperMarioBrothers.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="GimmickCtrl.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="EnemyConfig.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
